<resources>
    <string name="app_name">PriPathology</string>
    <string name="title_practice">Practice</string>
    <string name="title_exam">Exam</string>
    <string name="title_mine">Mine</string>
    <string name="order">Order</string>
    <string name="random">Random</string>
    <string name="download_database">DownloadData</string>
    <string name="upload_database">UploadData</string>
    <string name="sync_database">SyncData</string>
    <string name="splash_text">Loading</string>
    <string name="record_topic">RecordTopic</string>
    <string name="record_order">OrderRecord</string>
    <string name="record_random">RandomRecord</string>
    <string name="download_data">downloadData</string>
    <string name="insert_data">insertData</string>
    <string name="download_topic">downloadTopic</string>
    <string name="upload_topic_record">uploadTopicRecord</string>
    <string name="download_topic_record">downloadTopicRecord</string>
    <string name="view_topic_record">viewTopicRecord</string>
    <string name="update">update</string>
    <string name="current_version">currentVersion</string>
    <string name="select_topic_total">selectTopicTotal</string>
    <string name="select_time_total">selectTimeTotal</string>
    <string name="select">Select</string>
    <string name="examination">Examination</string>
    <string name="exam_submit">examSubmit</string>
</resources>
