<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/timelapse"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/ic_timelapse_white_24dp"/>

        <TextView
                android:id="@+id/tv_count_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/sync_database"/>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_download_topic"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_cloud_download_black_24dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/download_topic"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_upload_topic_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_cloud_upload_black_24dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/upload_topic_record"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_download_topic_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_cloud_download_black_24dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/download_topic_record"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/record_topic"/>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_order_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_order_black_24dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/record_order"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_random_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_random_black_24dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/record_random"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>