<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/select"/>
    <android.support.v7.widget.CardView
            android:id="@+id/cv_topic_total"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:text="@string/select_topic_total"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_selected_topic_total"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="100"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:id="@+id/cv_time_total"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:text="@string/select_time_total"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_selected_time_total"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="120"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_navigate_next_black_24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
            android:id="@+id/btn_start_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="开始考试"/>
</LinearLayout>